[project]
name = "hgn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "enlighten>=1.14.1",
    "imageio>=2.37.0",
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.1",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tabulate>=0.9.0",
    "torch>=2.6.0",
]
